--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "cookie-parser": "^1.4.6",
     "core-js": "^3.6.5",
+    "helmet": "^4.6.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-is": "17.0.2",
