--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/graphql": "^9.1.1",
     "@nestjs/platform-express": "^8.0.0",
+    "apollo-server-express": "^3.4.0",
     "cookie-parser": "^1.4.6",
     "core-js": "^3.6.5",
+    "graphql": "^15.7.2",
     "helmet": "^4.6.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -69,6 +72,7 @@
     "prettier": "^2.3.1",
     "react-test-renderer": "17.0.2",
     "ts-jest": "27.0.5",
+    "ts-morph": "^12.2.0",
     "typescript": "~4.4.3"
   }
 }
