--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "husky": "^7.0.0",
     "jest": "27.2.3",
     "prettier": "^2.3.1",
+    "prisma": "^3.5.0",
     "react-test-renderer": "17.0.2",
     "ts-jest": "27.0.5",
     "ts-morph": "^12.2.0",
