--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/graphql": "^9.1.1",
     "@nestjs/platform-express": "^8.0.0",
+    "@prisma/client": "^3.5.0",
     "apollo-server-express": "^3.4.0",
     "cookie-parser": "^1.4.6",
     "core-js": "^3.6.5",
