--- a/package.json
+++ b/package.json
@@ -76,5 +76,10 @@
     "ts-jest": "27.0.5",
     "ts-morph": "^12.2.0",
     "typescript": "~4.4.3"
+  },
+  "volta": {
+    "node": "16.13.0",
+    "npm": "8.1.4",
+    "yarn": "1.22.17"
   }
 }
