feat(types): add types generator

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@creation-mono/shared/models": ["libs/shared/models/src/index.ts"]
+      "@creation-mono/shared/models": ["libs/shared/models/src/index.ts"],
+      "@creation-mono/shared/types": ["libs/shared/types/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
