--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/graphql": "^9.1.1",
+    "@nestjs/jwt": "^8.0.0",
+    "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.0",
     "@prisma/client": "^3.5.0",
     "apollo-server-express": "^3.4.0",
@@ -21,6 +23,8 @@
     "core-js": "^3.6.5",
     "graphql": "^15.7.2",
     "helmet": "^4.6.0",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-is": "17.0.2",
@@ -29,7 +33,8 @@
     "regenerator-runtime": "0.13.7",
     "rxjs": "^7.0.0",
     "styled-components": "5.3.3",
-    "tslib": "^2.0.0"
+    "tslib": "^2.0.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^15.0.0",
@@ -52,6 +57,7 @@
     "@testing-library/react-hooks": "7.0.2",
     "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
+    "@types/passport-jwt": "^3.0.6",
     "@types/react": "17.0.30",
     "@types/react-dom": "17.0.9",
     "@types/react-is": "17.0.2",
