--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.5.5",
     "@graphql-mesh/mysql": "^0.14.4",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
