--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.5.5",
-    "@graphql-mesh/mysql": "^0.14.4",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/graphql": "^9.1.1",
@@ -43,6 +42,7 @@
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
     "@graphql-mesh/cli": "^0.44.0",
+    "@graphql-mesh/mysql": "^0.14.5",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@nrwl/cli": "13.2.0",
@@ -92,5 +92,8 @@
     "node": "16.13.0",
     "npm": "8.1.4",
     "yarn": "1.22.17"
+  },
+  "prisma": {
+    "seed": "ts-node ./src/prisma/seed.ts"
   }
 }
