chore(workspace): added missing info to readme and fixed typos

--- a/libs/shared/types/project.json
+++ b/libs/shared/types/project.json
@@ -21,7 +21,7 @@
     "gen-graphql": {
       "executor": "@nrwl/workspace:run-commands",
       "options": {
-        "command": "yarn mesh build --dir libs/shared/types"
+        "command": "npx mesh build --dir libs/shared/types"
       }
     },
     "gen-ts": {
