--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,20 @@
 version: '3.9'
 services:
   db:
-    image: mysql:latest
+    image: mariadb:latest
     volumes:
       - ./tmp:/var/lib/mysql
     environment:
       MYSQL_ROOT_PASSWORD: 'asd123'
     ports:
       - '3306:3306'
-    command: [mysqld, --default-authentication-plugin=mysql_native_password]
     container_name: db
   wallet:
     build:
       context: .
+    image: wallet
     volumes:
-      - /node_modules
+      - /wallet/node_modules
       - .:/wallet:cached
     tty: true
     stdin_open: true
@@ -26,11 +26,11 @@ services:
     environment:
       - DATABASE_URL=mysql://root:asd123@db:3306/walletdb
   wallet-ui:
-    image: creation-mono_wallet
+    image: wallet
     tty: true
     stdin_open: true
     volumes:
-      - /node_modules
+      - /wallet/node_modules
       - .:/wallet:cached
     command: 'npx nx run frontend:serve'
     ports:
