--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@nestjs/platform-express": "^8.0.0",
     "@prisma/client": "^3.5.0",
     "apollo-server-express": "^3.4.0",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.2",
     "clsx": "^1.1.1",
     "cookie-parser": "^1.4.6",
     "core-js": "^3.6.5",
