--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^1.1.1",
     "cookie-parser": "^1.4.6",
     "core-js": "^3.6.5",
+    "decimal.js-light": "^2.5.1",
     "graphql": "^15.7.2",
     "helmet": "^4.6.0",
     "passport": "^0.4.1",
