--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/throttler": "^2.0.0",
     "@prisma/client": "^3.5.0",
+    "@radix-ui/react-dialog": "^0.1.3",
+    "@radix-ui/react-icons": "^1.0.3",
+    "@radix-ui/react-tooltip": "^0.1.4",
     "apollo-server-express": "^3.4.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.2",
