--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,4 @@ TOKEN_DURATION=86400000
 RATE_LIMIT_TTL=60
 RATE_LIMIT=10
 REQUEST_TIMEOUT=60000
-LOGGER_SERVER_URL=logs4.papertrailapp.com:0000
+SLACK_HOOK_URL=https://hooks.slack.com/services/T00000000/B00000000/XXXXXXXXXXXXXXXXXXXXXXXX
