--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "tslib": "^2.0.0",
     "uuid": "^8.3.2",
     "winston": "^3.3.3",
-    "winston-papertrail": "^1.0.5"
+    "winston-slack-webhook-transport": "^2.1.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^15.0.0",
