--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@apollo/client": "^3.5.5",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/cqrs": "^8.0.1",
     "@nestjs/graphql": "^9.1.1",
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/passport": "^8.0.1",
