--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@nestjs/throttler": "^2.0.0",
     "@prisma/client": "^3.8.1",
     "apollo-server-express": "^3.4.0",
-    "class-transformer": "^0.4.0",
+    "class-transformer": "~0.4.0",
     "class-validator": "^0.13.2",
     "clsx": "^1.1.1",
     "cookie-parser": "^1.4.6",
