--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ RATE_LIMIT_TTL=60
 RATE_LIMIT=10
 REQUEST_TIMEOUT=60000
 SLACK_HOOK_URL=https://hooks.slack.com/services/T00000000/B00000000/XXXXXXXXXXXXXXXXXXXXXXXX
+SALT_ROUNDS=10
