--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/throttler": "^2.0.0",
     "@prisma/client": "^3.8.1",
     "apollo-server-express": "^3.4.0",
+    "bcrypt": "^5.0.1",
     "class-transformer": "~0.4.0",
     "class-validator": "^0.13.2",
     "clsx": "^1.1.1",
@@ -67,6 +68,7 @@
     "@nrwl/workspace": "13.2.0",
     "@testing-library/react": "12.1.2",
     "@testing-library/react-hooks": "7.0.2",
+    "@types/bcrypt": "^5.0.0",
     "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
     "@types/passport-jwt": "^3.0.6",
