--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "start-prod": "node ./dist/apps/backend/main.js",
-    "start": "nx serve",
-    "build": "nx build",
-    "test": "nx test",
+    "start": "node ./dist/apps/backend/main.js",
+    "serve": "npx nx run-many --target=serve --projects=backend,frontend",
+    "build": "npx nx run-many --target=build --projects=backend,frontend",
+    "test": "npx nx run-many --target=test --projects=backend,frontend,shared-models,shared-types,shared-logger",
     "prepare": "husky install",
-    "update-all": "nx run shared-models:db-pull && nx run shared-models:gen-client && nx run shared-types:gen-ts",
-    "gen-ts": "nx run shared-types:gen-ts",
-    "db-pull": "nx run shared-models:db-pull",
-    "db-push": "nx run shared-models:db-push",
-    "gen-prisma-client": "nx run shared-models:gen-client",
+    "update-all": "npx nx run shared-models:db-pull && npx nx run shared-models:gen-client && npx nx run shared-types:gen-ts",
+    "gen-ts": "npx nx run shared-types:gen-ts",
+    "db-pull": "npx nx run shared-models:db-pull",
+    "db-push": "npx nx run shared-models:db-push",
+    "gen-prisma-client": "npx nx run shared-models:gen-client",
     "create-migration": "npx prisma migrate dev",
     "deploy-migration": "npx prisma migrate deploy"
   },
