--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dom": "17.0.2",
     "react-is": "17.0.2",
     "react-router-dom": "5.3.0",
+    "recharts": "^2.1.9",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
     "rxjs": "^7.0.0",
