--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nestjs/throttler": "^2.0.0",
     "@prisma/client": "^3.5.0",
     "@radix-ui/react-dialog": "^0.1.3",
+    "@radix-ui/react-dropdown-menu": "^0.1.4",
     "@radix-ui/react-icons": "^1.0.3",
     "@radix-ui/react-tooltip": "^0.1.4",
     "apollo-server-express": "^3.4.0",
