chore(workspace): update .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,10 @@
 DATABASE_URL=mysql://USER:PASSWORD@HOST:PORT/DATABASE
 TOKEN_DURATION=86400000
-RATE_LIMIT_TTL=60
-RATE_LIMIT=10
+THROTTLE_TTL=60
+THROTTLE_LIMIT=10
 REQUEST_TIMEOUT=60000
 SLACK_HOOK_URL=https://hooks.slack.com/services/T00000000/B00000000/XXXXXXXXXXXXXXXXXXXXXXXX
 SALT_ROUNDS=10
 ORIGIN=http://localhost:4200
 NX_GRAPHQL_URI=http://localhost:3000/graphql
+JWT_SECRET=mysecret
